# ResearchRAG

./: .gitignore  .gitmessage  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: index.md
tests/: test_hello.py
